Introduzindo Eventos:sparkles:

--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
     <title>JQuery</title>
 </head>
 <body>
-    <div id="teste" class="artigo1">
+    <div id="teste" class="artigo1"  >
         <p>Olá Mundo</p>
     </div><!--Teste-->
     
+    <div id="teste" class="artigo2"  >
+        <p>Olá Mundo</p>
+    </div><!--Teste-->
     
+    <textarea></textarea>
+
+    <select name="" id="">
+        <option value="">1</option>
+        <option value="">2</option>
+        <option value="">3</option>
+    </select>
 </body>
 </html>
