Mais sobre evento:zap:

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <title>JQuery</title>
 </head>
 <body>
+
+    <!--
     <div id="teste" class="artigo1"  >
         <p>Olá Mundo</p>
-    </div><!--Teste-->
+    </div>
     
     <div id="teste" class="artigo2"  >
         <p>Olá Mundo</p>
-    </div><!--Teste-->
+    </div>
     
     <textarea></textarea>
 
@@ -25,5 +27,12 @@
         <option value="">2</option>
         <option value="">3</option>
     </select>
+-->
+
+<div class="box">
+    <H1>Meu Conteudo</H1>
+</div>
+
+
 </body>
 </html>
