--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/syle.css">
     <script defer type="text/javascript" src="js/jquery.js"></script>
     <script defer type="text/javascript" src="js/functions.js"></script>
+    <script defer type="text/javascript" src="js/main.js"></script>
     <title>JQuery</title>
 </head>
 <body>
